src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>BehrPro Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contact Attempted</fullName>
        </values>
        <values>
            <fullName>Contact Made</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified In-store Rep</fullName>
        </values>
        <values>
            <fullName>Qualified Pro Rep</fullName>
        </values>
        <values>
            <fullName>Unable to make Contact</fullName>
        </values>
        <values>
            <fullName>Unqualified - Delete %28Non-Paint%29</fullName>
        </values>
        <values>
            <fullName>Unqualified Nurture</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Employee_Size__c</fullName>
        <label>Actual Employee Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Volume__c</fullName>
        <label>Actual Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>additional notes gathered from the lead</description>
        <label>Additional Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advert_type__c</fullName>
        <label>Advert Source</label>
        <picklist>
            <picklistValues>
                <fullName>Multiview PDCA Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Online Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Ave_Shipments__c</fullName>
        <inlineHelpText>Related question to Exporter</inlineHelpText>
        <label>Annual Ave. Shipments</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Ave_of_Gallons_Exported__c</fullName>
        <inlineHelpText>Related question to Exporter</inlineHelpText>
        <label>Annual Ave. # of Gallons Exported</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>100-300 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-600 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>601 or more Gallons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <label>Annual Volume</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_With_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to tell the assignWithZipCode trigger to fire.</description>
        <label>Assign With Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BehrPro_Rating__c</fullName>
        <formula>CASE(
Lead_Score__c,
 1.0, &quot;Cold&quot;,
 2.0, &quot;Cold&quot;,  
 3.0, &quot;Warm&quot;, 
 4.0, &quot;Hot&quot;, 
 5.0, &quot;Hot&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BehrPro Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behr_Rep_Contact__c</fullName>
        <description>Customer would like for a Behr Rep to contact them</description>
        <inlineHelpText>Indicates if the customer would like  a Behr Rep to contact them</inlineHelpText>
        <label>Behr Rep Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Case_Justification__c</fullName>
        <label>Business Case/Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__ProductInterest__c</fullName>
        <label>DupeBlocker - Ignore</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chapter_Market_Region__c</fullName>
        <label>Chapter/Market/Region</label>
        <picklist>
            <controllingField>Trade_Associations__c</controllingField>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suncoast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_me_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact me Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>CASE(MID(TEXT(  CreatedDate ), 6, 2), 
&quot;01&quot;, &quot;01 January&quot;, 
&quot;02&quot;, &quot;02 February&quot;, 
&quot;03&quot;, &quot;03 March&quot;, 
&quot;04&quot;, &quot;04 April&quot;, 
&quot;05&quot;, &quot;05 May&quot;, 
&quot;06&quot;, &quot;06 June&quot;, 
&quot;07&quot;, &quot;07 July&quot;, 
&quot;08&quot;, &quot;08 August&quot;, 
&quot;09&quot;, &quot;09 September&quot;, 
&quot;10&quot;, &quot;10 October&quot;, 
&quot;11&quot;, &quot;11 November&quot;, 
&quot;12&quot;, &quot;12 December&quot;, 
&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Score__c</fullName>
        <label>D&amp;B Score</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Coupon_Required__c</fullName>
        <label>Date Coupon Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rcvd__c</fullName>
        <inlineHelpText>Date/Time D&amp;B score was received from Pro Mktg/Finance.</inlineHelpText>
        <label>Date Rcvd</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Rcvd_by_Source__c</fullName>
        <description>Date that request for info or lead info was submitted or received by lead source.</description>
        <label>Date Rcvd by Source</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Unassigned_Lead__c</fullName>
        <label>Date for UnAssigned Lead Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direct_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_apply_lead_assignment_rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not apply lead assignment rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Insert_Action__c</fullName>
        <description>To allow dupblocker to indicate what was done to the duplication</description>
        <label>DupeBlocker Insert Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Update_Action__c</fullName>
        <description>DupeBlocker action done during update</description>
        <label>DupeBlocker Update Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__BuySignals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Buy Signals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentActivityDate__c</fullName>
        <label>Most Recent Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentBuySignalDate__c</fullName>
        <label>Most Recent Buy Signal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalInboundActivity__c</fullName>
        <label>Total Inbound Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <label>Eloqua Lead Rating</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Size_Range__c</fullName>
        <label>Employee Size Range</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Spend__c</fullName>
        <inlineHelpText>Total estimated LIQUID spend</inlineHelpText>
        <label>Estimated Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Paint_Usage__c</fullName>
        <label>Estimated Monthly Paint Usage</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;50 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-124 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;125 Gallons</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Over 45 gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;124 Gallons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Actual Date that the event took place</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Franchise_Specialty_Desc_1__c</fullName>
        <label>Franchise_Specialty_Desc_1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Specialty_Desc_2__c</fullName>
        <label>Franchise_Specialty_Desc_2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Work_Type__c</fullName>
        <inlineHelpText>Related question for Architect, Designer</inlineHelpText>
        <label>Geographical Work Type</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Name__c</fullName>
        <label>Gift Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Tier__c</fullName>
        <label>HD Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used for Behr Instore leads to determine if the lead has a sale pending match.  If an unmatched DTP or HD cust id is found, the crm fusion process will turn this flag on.  These leads will then be auto converted.</description>
        <label>Has Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_Upcoming_Projects__c</fullName>
        <label>Have Upcoming Projects?</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hear_From__c</fullName>
        <label>Hear From</label>
        <picklist>
            <picklistValues>
                <fullName>BehrPro Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Depot Store Signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website/Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBS_Source__c</fullName>
        <label>IBS Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_d_like_to_receive_other__c</fullName>
        <inlineHelpText>This is captured on the web to lead IBS registration form.</inlineHelpText>
        <label>I&apos;d like to receive Behr News</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_will_be_attending_IBS__c</fullName>
        <label>I will be attending IBS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Specific_Description__c</fullName>
        <label>Industry-Specific Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instore_Rep_Email__c</fullName>
        <label>Instore Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <formula>TODAY()  - DATEVALUE( Last_Modified_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>Date of magazine issue</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Pro_Rewards__c</fullName>
        <label>Join Pro Rewards?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date For Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Generating_Event__c</fullName>
        <inlineHelpText>Please fill in Other Source if you selected &quot;Other&quot; Lead Source</inlineHelpText>
        <label>If Other Source, please specify:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>IF (  Gift_Name__c  &lt;&gt; &quot; &quot; , 
(Round ((Primary_Product_Score__c + Title_Score__c +  Usage_Score__c ) / 3, 0)),
(Round ((Primary_Product_Score__c + Title_Score__c +  Usage_Score__c +   Paint_Crew_Score__c  + Contact_me_Score__c +  Role_Score__c  ) / 6, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Leads are Scored 1-5 with 1 being the lowest score and 5 the highest score.</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Clone__c</fullName>
        <label>Lead Source Clone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source-Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behr In-Store Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPRO Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPro Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash &amp; Carry Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call - Job Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call- THD In Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTP Drivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVO Mkt Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMF Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Services InstallCompanies Mobile Marketing Tour 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiview PDCA Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAHRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Carryout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Carryout THD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD National Account Trade Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD PASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD PPSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Pro Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Magazine Publication</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMT_Team_Location__c</fullName>
        <label>MMT Team Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMT_Team__c</fullName>
        <label>MMT Team</label>
        <picklist>
            <picklistValues>
                <fullName>Team 1 Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 2 South West/Texas/Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 3 Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 4 Northeast/Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 5 Southeast/Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 1-West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 2-East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMT_WTL_AtEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MMT_WTL_AtEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMT_WTL_Microsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MMT_WTL_Microsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magazine_Subscribed__c</fullName>
        <description>Indication that the record had subscribed to the Behrpro Magazine</description>
        <label>Magazine Subscribed</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_Company_Name__c</fullName>
        <inlineHelpText>Related question for Property Management</inlineHelpText>
        <label>Management Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Profession/Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B(OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting and Wall Covering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifier</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Sub__c</fullName>
        <label>Market Sub Segment(old)</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction-Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metro_Area__c</fullName>
        <label>Metro Area</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Pro_Rewards_Sign_Up__c</fullName>
        <label>New Sign-Up</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Expected_Paint_Purchase__c</fullName>
        <inlineHelpText>Question Related to Architect, Designer, General Contractor, Remodeler</inlineHelpText>
        <label>Next Expected Paint Purchase</label>
        <picklist>
            <controllingField>Have_Upcoming_Projects__c</controllingField>
            <picklistValues>
                <fullName>&lt;90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 to 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing Planned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Properties_Managed__c</fullName>
        <inlineHelpText>Related question for Property Management</inlineHelpText>
        <label>No. of Properties Managed</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1 - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>